# the_pere_spicace

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  ruff.toml
.github/hooks/: pre-push
.github/workflows/: codeql-analysis.yml  docker-build.yml  python-test.yml
docker/: Dockerfile
scripts/: run_tests.py
src/: config.py
src/cli/: cli.py
src/database/: sqlite_memory.py
src/llm/: llm_client.py
src/obsidian/: vault_indexer.py  vault_structure.py  watcher.py
src/prompts/: content_generation_context.txt  content_generation_user.txt  content_retriever_context.txt  content_retriever_user.txt  topic_extraction_context.txt  topic_extraction_user.txt  vault_mapper_context.txt  vault_mapper_user.txt
src/rag/: chuncker.py  chunker.py  embedder.py  retriever.py  store.py
src/transcription_client/: __init__.py  youtube_transcript_client.py
src/utils/: cookie_extractor.py
tests/: conftest.py  requirements.txt
tests/integration/: test_integration.py
tests/unit/: test_chunker.py  test_cookie_extractor.py  test_database.py  test_embedder.py  test_llm_client.py  test_main.py  test_mcp_client.py  test_rag_chunker.py  test_rag_embedder.py  test_rag_store.py  test_retriever.py  test_store.py  test_transcription_and_db.py  test_vault_indexer.py  test_vault_structure.py  test_watcher.py  test_youtube_transcription_client.py
