[project]
name = "the_pere_spicace"
version = "0.1.0"
description = "Convert YouTube videos to Obsidian notes with quizzes"
authors = [{name = "abaddon-moriarty", email = "munaund@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Add your actual runtime dependencies here
    # If mcp needs to be installed from a specific source, handle it differently
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0",
]
docker = [
    "docker>=6.0.0",
]