[project]
name = "the_pere_spicace"
version = "0.1.0"
description = "Convert YouTube videos to Obsidian notes with quizzes"
authors = [{name = "abaddon-moriarty", email = "munaund@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.5.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "python-frontmatter>=1.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "watchdog>=4.0.0",
    "mcp",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.10.0",
    "pre-commit>=3.0.0",
    "types-requests>=2.31.0",
]
docker = [
    "docker>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
explicit_package_bases = true
mypy_path = ["."]
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "frontmatter", 
    "google",
    "google.*",
    "chromadb",
    "chromadb.*",
    ]
follow_imports = "skip"

ignore_missing_imports = true

